fix wrapped label and the basic info width

--- a/pages/token/styles.module.scss
+++ b/pages/token/styles.module.scss
@@ -83,6 +83,11 @@
       display: none;
     }
   }
+  @media screen and (min-width: 1024px) {
+    .info-width {
+      width: 50%;
+    }
+  }
 }
 
 .list {
